--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+reqwest = { version = "0.12.9", features = ["multipart"] }
+sha3 = "0.10.8"
+tokio = { version = "1.41.1", features = ["full"] }
