--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2021"
 axum = "0.7.7"
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
+sha3 = "0.10.8"
+surrealdb = "2.0.4"
 tokio = { version = "1.40.0", features = ["full"] }
 tower-http = "0.6.1"
