--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,4 @@ serde_json = "1.0.128"
 sha3 = "0.10.8"
 surrealdb = "2.0.4"
 tokio = { version = "1.40.0", features = ["full"] }
-tower-http = "0.6.1"
+tower-http = { version = "0.6.1", features = ["cors"] }
