--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 axum = { version = "0.7.7", features = ["multipart"] }
+chrono = { version = "0.4.38", features = ["serde"] }
 futures = "0.3.31"
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
